<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/principal"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/txvViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/principal"
        android:textSize="30pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViaje"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calculadora_de_viaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvViaje" />

    <Button
        android:id="@+id/btnPrestamo"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/calculadora_de_prestamo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViaje" />

    <Button
        android:id="@+id/btnGame"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrestamo" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGame" />

</androidx.constraintlayout.widget.ConstraintLayout>